# roh-moo-hyun

./: .gitignore  Dockerfile  README.md  nnn.txt  president_speeches.db  president_speeches_batch_data_0.0.parquet  pyproject.toml  requirements.txt
data/datagokr/: president_archive_ministry_of_public_safety_president_speech_record_speech_20220817.csv  president_speeches_sample100.csv
data/db/: president_speeches.db
data/parquet/: president_speeches_batch_data_1.parquet  president_speeches_batch_data_2.parquet  president_speeches_batch_data_3.parquet  president_speeches_batch_data_4.parquet  president_speeches_batch_data_5.parquet  president_speeches_batch_data_6.parquet  president_speeches_batch_data_7.parquet  president_speeches_batch_data_8.parquet
note/: check_crawling_parquet.ipynb  check_server_crawling.ipynb  datagokr.http  datagokr.ipynb  president_speeches.db  speech_crawling.ipynb
parquet/: crawling_president_speeches_1400001.parquet  crawling_president_speeches_1400301.parquet  crawling_president_speeches_1400401.parquet  crawling_president_speeches_1400501.parquet  crawling_president_speeches_1400601.parquet  crawling_president_speeches_1400901.parquet  crawling_president_speeches_1401001.parquet  crawling_president_speeches_1401301.parquet  crawling_president_speeches_1401601.parquet
server_parquet/parquet/: crawling_president_speeches_1300000.parquet  crawling_president_speeches_1300100.parquet  crawling_president_speeches_1300200.parquet  crawling_president_speeches_1300300.parquet  crawling_president_speeches_1300400.parquet  crawling_president_speeches_1300500.parquet  crawling_president_speeches_1300600.parquet  crawling_president_speeches_1300700.parquet  crawling_president_speeches_1300800.parquet  crawling_president_speeches_1300900.parquet  crawling_president_speeches_1301000.parquet  crawling_president_speeches_1301100.parquet  crawling_president_speeches_1301200.parquet  crawling_president_speeches_1301300.parquet  crawling_president_speeches_1301400.parquet  crawling_president_speeches_1301500.parquet  crawling_president_speeches_1301600.parquet  crawling_president_speeches_1301700.parquet  crawling_president_speeches_1301800.parquet  crawling_president_speeches_1301900.parquet  crawling_president_speeches_1302000.parquet  crawling_president_speeches_1302100.parquet  crawling_president_speeches_1302200.parquet  crawling_president_speeches_1302300.parquet  crawling_president_speeches_1302400.parquet  crawling_president_speeches_1302500.parquet  (+998 more)
src/roh_moo_hyun/: cli.py  (+1 more)
tests/: test_search.py
(+31 files in other folders)
