[project]
name = "roh-moo-hyun"
version = "0.4.0"
description = ""
authors = [
    {name = "becky2sawyer", email = "becky2sawyer@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.1",
    "pytest-cov>=4.1.0",
]
doc = [
    "mkdocs>=1.5.2",
]
