[project]
name = "roh-moo-hyun"
version = "0.4.0"
description = ""
authors = [
    {name = "becky2sawyer", email = "becky2sawyer@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pypdf>=3.15.5",
    "pandas>=2.1.0",
    "pyarrow>=13.0.0",
    "fastparquet>=2023.8.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.1",
    "pytest-cov>=4.1.0",
]
doc = [
    "mkdocs>=1.5.2",
]

[project.scripts]
rmh-db-init = 'roh_moo_hyun.extract_speech_from_pdf:run'
rmh-search = 'roh_moo_hyun.cli:search'
