[project]
name = "president-speech"
version = "0.5.0"
description = "helper pip package module for analyzing presidential speech records (including basic data)"
authors = [
    {name = "dmario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pypdf>=3.15.5",
    "pandas>=2.1.0",
    "pyarrow>=13.0.0",
    "fastparquet>=2023.8.0",
    "jupyter>=1.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.1",
    "pytest-cov>=4.1.0",
]
doc = [
    "mkdocs>=1.5.2",
]

[project.scripts]
rmh-db-init = 'roh_moo_hyun.extract_speech_from_pdf:run'
rmh-search = 'roh_moo_hyun.cli:search'

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# you do NOT need to include the following line.
namespaces = true
where = ["src"]

[tool.setuptools.package-data]
"president_speech.db" = ["init.db"]

[tool.pdm.scripts]
ptest = "pytest -s"
test = "pytest"

[project.urls]
"Homepage" = "https://github.com/edu-data-mario/president-speech/president-speech"
"Bug Tracker" = "https://github.com/edu-data-mario/president-speech/issues"
